--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -12,7 +12,7 @@
 		<spring.version>4.3.6.RELEASE</spring.version>
 	</properties>
 	<dependencies>
-	
+
 		<!-- javaee-api -->
 		<dependency>
 			<groupId>javax</groupId>
@@ -20,7 +20,14 @@
 			<version>${javaee.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
+		<!-- Link backend<dependency> project(copy from backend to front end) -->
+		<dependency>
+			<groupId>net.ashish</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 		<!-- JUNIT-API -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -28,20 +35,23 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- SPRING -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- JSTL -->
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+
+
 	</dependencies>
 	<build>
 		<plugins>
